--- a/client/src/styles/partials/_download.scss
+++ b/client/src/styles/partials/_download.scss
@@ -8,6 +8,7 @@
         justify-content: center;
         img {
             width: 200px;
+            height: 89px;
         }
     }
     &__title {
