--- a/client/src/styles/partials/_staffs.scss
+++ b/client/src/styles/partials/_staffs.scss
@@ -13,6 +13,7 @@
         justify-content: center;
         img {
             width: 200px;
+            height: 89px;
         }
     }
     &__title {
